# Automatic-Tag-Generation-for-Text-Article

./: CMakeLists.txt  Makefile  README.md
include/: datasets.h  embeddings.h  model.h  tagger.h
src/: datasets.cpp  embeddings.cpp  main.cpp  tagger.cpp
src/embeddings/: README.md  _embeddings.cpp
